Changes in api routes and defined proper routes basis on security
