# src/routes/secure/cricket/cricket.routes.ts
@@ -1,0 +1,12 @@
+import { Router } from 'express';
+import teamRoutes from '../../../modules/cricket/teams/team.routes';
+import playerRoutes from '../../../modules/cricket/players/player.routes';
+import seriesRoutes from '../../../modules/cricket/Series/series.router';
+
+const router = Router();
+
+router.use('/teams', teamRoutes);
+router.use('/players', playerRoutes);
+router.use('/series', seriesRoutes);
+
+export default router;
