# src/swagger/cricket/team.yaml
@@ -5,7 +5,7 @@ info:
   description: API documentation for managing teams
 
 paths:
-  /teams:
+  /cricket/teams:
     get:
       summary: Get all teams
       tags:
@@ -37,7 +37,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Team'
 
-  /teams/{teamId}:
+  /cricket/teams/{teamId}:
     get:
       summary: Get team by ID
       tags:
